12- Flask real time/db.yml
# A db blocks http traffic, they talk via TCP. Hence, for liveness & readiness probes, give tcpSocket instead of httpGet

# pvc, db & svc included here
---


# svc for mysqldb

apiVersion: v1
kind: Service
metadata:
  name: mysqldb-svc   ##
  namespace: ccp-vra-prod
spec:
  selector:
    db: mysql
    env: prod
  type: ClusterIP   # this is the default value
  ClusterIP: None    # always give "None" to any db svc so that the svc only exposes the db pod directly to some app 
  ports:      
  - port: 3306      # service port

---
